syntax = "proto3";

package hydrosphere.contract;

import "tf/tensor_info.proto";

message ModelField {
    message Dict {
        map<string, ModelField> data = 1;
    }

    string field_name = 1;

     oneof info_or_dict {
         Dict dict = 2;
         hydrosphere.tensorflow.TensorInfo info = 3;
    }
}